src/objects/IATA_Process_Orchestrator__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case Associated</description>
        <label>Associated Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>IATA Processes Orchestrator</relationshipLabel>
        <relationshipName>IATA_Processes_Orchestrator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_Orchestrator_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to IATA Process Orchestrator</description>
        <label>IATA Orchestrator Process</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IATA_Process_Orchestrator__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Orchestrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IATA_Process_Orchestrator__c</referenceTo>
        <relationshipLabel>IATA Orchestrator Processes</relationshipLabel>
        <relationshipName>IATA_Orchestrator_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <description>This field is the overall status of all stages</description>
        <label>Overall Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <description>Name of process</description>
        <label>Process Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Step_Name__c</fullName>
        <description>Holds the name of a given step in a Business Process Name</description>
        <label>Process Step Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Step_Stage__c</fullName>
        <description>Name of the step stage about the process</description>
        <label>Process Step Stage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Order__c</fullName>
        <description>Order of processing</description>
        <label>Processing Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Record Type used</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status about process</description>
        <formula>IF( Total_Actions_Pending_Customer__c &gt; 0 , &apos;Pending Customer&apos;, 
IF( Total_Actions_Failed__c &gt; 0, &apos;Fail&apos;,
IF( Total_Actions_Completed__c = Total_Number_of_Actions__c, &apos;Completed&apos;, 
IF( OR(Total_Actions_Progressing__c &gt; 0, Total_Actions_Completed__c &gt; 0), &apos;Progressing&apos;, &apos;Not Started&apos;))))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Completed_NB__c</fullName>
        <description>Total Actions that are completed (NB)</description>
        <label>Total Actions Completed (NB)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Completed__c</fullName>
        <description>Total Actions that are completed</description>
        <label>Total Actions Completed</label>
        <summaryFilterItems>
            <field>IATA_Process_Orchestrator_Step_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>IATA_Process_Orchestrator_Step_Action__c.IATA_Process_Orchestrator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Failed_NB__c</fullName>
        <description>Total Actions that failed (NB)</description>
        <label>Total Actions Failed (NB)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Failed__c</fullName>
        <description>Total Actions that failed</description>
        <label>Total Actions Failed</label>
        <summaryFilterItems>
            <field>IATA_Process_Orchestrator_Step_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Fail</value>
        </summaryFilterItems>
        <summaryForeignKey>IATA_Process_Orchestrator_Step_Action__c.IATA_Process_Orchestrator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Pending_Customer__c</fullName>
        <description>Total Actions with status Pending Customer</description>
        <label>Total Actions Pending Customer</label>
        <summaryFilterItems>
            <field>IATA_Process_Orchestrator_Step_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending Customer</value>
        </summaryFilterItems>
        <summaryForeignKey>IATA_Process_Orchestrator_Step_Action__c.IATA_Process_Orchestrator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Actions_Progressing__c</fullName>
        <description>Total Actions with status Progressing</description>
        <label>Total Actions Progressing</label>
        <summaryFilterItems>
            <field>IATA_Process_Orchestrator_Step_Action__c.Status__c</field>
            <operation>equals</operation>
            <value>Progressing</value>
        </summaryFilterItems>
        <summaryForeignKey>IATA_Process_Orchestrator_Step_Action__c.IATA_Process_Orchestrator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Actions__c</fullName>
        <description>Number of total actions</description>
        <label>Total Actions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Actions__c</fullName>
        <description>Total Number of Actions with status different from Not Applicable</description>
        <label>Total Number of Actions</label>
        <summaryFilterItems>
            <field>IATA_Process_Orchestrator_Step_Action__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Not Applicable</value>
        </summaryFilterItems>
        <summaryForeignKey>IATA_Process_Orchestrator_Step_Action__c.IATA_Process_Orchestrator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>IATA Process Orchestrator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IATA_Orchestrator_Process__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Associated_Case__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Total_Actions__c</columns>
        <columns>Process_Step_Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RecycleBinAfricaMiddleEast_IATA_Process_Orchestrator</fullName>
        <filterScope>Queue</filterScope>
        <label>Recycle Bin Africa &amp; Middle East</label>
        <queue>RecycleBinAfricaMiddleEast</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecycleBinAmericas_IATA_Process_Orchestrator</fullName>
        <filterScope>Queue</filterScope>
        <label>Recycle Bin Americas</label>
        <queue>RecycleBinAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecycleBinAsiaPacific_IATA_Process_Orchestrator</fullName>
        <filterScope>Queue</filterScope>
        <label>Recycle Bin Asia &amp; Pacific</label>
        <queue>RecycleBinAsiaPacific</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecycleBinEurope_IATA_Process_Orchestrator</fullName>
        <filterScope>Queue</filterScope>
        <label>Recycle Bin Europe</label>
        <queue>RecycleBinEurope</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecycleBinOperationalManagementHO_IATA_Process_Orchestrator</fullName>
        <filterScope>Queue</filterScope>
        <label>Recycle Bin Operational Management HO</label>
        <queue>RecycleBinOperationalManagementHO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RecyclebinNorthAsia_IATA_Process_Orchestrator</fullName>
        <filterScope>Queue</filterScope>
        <label>Recycle bin North Asia</label>
        <queue>RecyclebinNorthAsia</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IO-{000000}</displayFormat>
        <label>IATA Process Orchestrator No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IATA Processes Orchestrator</pluralLabel>
    <recordTypes>
        <fullName>IATA_Process_Step</fullName>
        <active>true</active>
        <description>Represents an IATA Process Step</description>
        <label>IATA Process Step</label>
    </recordTypes>
    <recordTypes>
        <fullName>Orchestrator</fullName>
        <active>true</active>
        <description>Record Type to hold IATA Orchestrator Process</description>
        <label>Orchestrator</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>